# assignment-evaluator

./: .gitignore  LICENSE  README.md  assignment_evaluator.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
assignment_evaluator/: __init__.py  __main__.py  app.py
